# pyp9m4

./: .gitignore  README.md  pyproject.toml
.cursor/plans/: api_alignment_semantic_layer_aliases.plan.md  high-level_p9_m4_api_1b228ab8.plan.md  ladr_fluent_api_redesign_50293d59.plan.md  mace4interpretation_enrichment_5bff0aa3.plan.md  pyp9m4_api_orchestration_228d3e3a.plan.md  pyp9m4_wrapper_design_f2016b87.plan.md
.github/workflows/: ci.yml
examples/: kr_frames.py  pyp9m4_example.ipynb  pyp9m4_example.py
pyp9m4/: __init__.py  event_stream.py  file_sources.py  io_kinds.py  job_manager.py  jobs.py  ladr_cli.py  mace4_facade.py  pipe.py  pipeline.py  pipeline_facades.py  prover9_facade.py  resolver.py  runner.py  serialization.py  stage_fluent.py  theory.py  toolkit.py
pyp9m4/bridge/: __init__.py  pysmt_extra.py  smtlib.py  tptp.py
pyp9m4/options/: __init__.py  clausefilter.py  clausetester.py  ingest.py  interpfilter.py  interpformat.py  isofilter.py  ladr_to_tptp.py  mace4.py  prooftrans.py  prover9.py  registry.py  renamer.py  rewriter.py  test_clause_eval.py  tptp_to_ladr.py  validate.py
pyp9m4/parsers/: __init__.py  common.py  mace4.py  pipeline.py  prover9.py  prover9_outcome.py
tests/: test_bridge.py  test_cli_help_alignment.py  test_e2e_binaries.py  test_facade_handles_mocked.py  test_job_manager.py  test_jobs.py  test_mace4_facade.py  test_options_argv.py  test_options_ingest.py  test_parsers.py  test_pipe.py  test_pipeline.py  test_pipeline_facades.py  test_prover9_facade.py  test_prover9_outcome.py  test_resolver.py  test_runner.py  test_serialization.py  test_theory_and_taxonomy.py  test_theory_stage.py
tests/corpus/e2e/: mace4_sat.in  trivial.in
