[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyp9m4"
version = "0.1.0"
description = "Python wrapper for Prover9/Mace4 (LADR) binaries"
requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]
# Placeholder for future optional TPTP tooling (stdlib bridge lives in ``pyp9m4.bridge.tptp``).
tptp = []
smt = [
    "pysmt>=0.9.5",
]

[tool.hatch.build.targets.wheel]
packages = ["pyp9m4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that require resolved LADR binaries (download or LADR_BIN_DIR)",
]
