[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyp9m4"
version = "0.2.2"
description = "Python wrapper for Prover9/Mace4 (LADR) binaries"
requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.0.0",
]

[project.scripts]
prover9 = "pyp9m4.ladr_cli:prover9_main"
mace4 = "pyp9m4.ladr_cli:mace4_main"
interpformat = "pyp9m4.ladr_cli:interpformat_main"
isofilter = "pyp9m4.ladr_cli:isofilter_main"
prooftrans = "pyp9m4.ladr_cli:prooftrans_main"
clausetester = "pyp9m4.ladr_cli:clausetester_main"
autosketches4 = "pyp9m4.ladr_cli:autosketches4_main"
clausefilter = "pyp9m4.ladr_cli:clausefilter_main"
complex = "pyp9m4.ladr_cli:complex_main"
directproof = "pyp9m4.ladr_cli:directproof_main"
dprofiles = "pyp9m4.ladr_cli:dprofiles_main"
fof-prover9 = "pyp9m4.ladr_cli:fof_prover9_main"
gen_trc_defs = "pyp9m4.ladr_cli:gen_trc_defs_main"
idfilter = "pyp9m4.ladr_cli:idfilter_main"
isofilter0 = "pyp9m4.ladr_cli:isofilter0_main"
isofilter2 = "pyp9m4.ladr_cli:isofilter2_main"
ladr_to_tptp = "pyp9m4.ladr_cli:ladr_to_tptp_main"
latfilter = "pyp9m4.ladr_cli:latfilter_main"
looper = "pyp9m4.ladr_cli:looper_main"
miniscope = "pyp9m4.ladr_cli:miniscope_main"
mirror-flip = "pyp9m4.ladr_cli:mirror_flip_main"
newauto = "pyp9m4.ladr_cli:newauto_main"
newsax = "pyp9m4.ladr_cli:newsax_main"
olfilter = "pyp9m4.ladr_cli:olfilter_main"
perm3 = "pyp9m4.ladr_cli:perm3_main"
renamer = "pyp9m4.ladr_cli:renamer_main"
rewriter = "pyp9m4.ladr_cli:rewriter_main"
sigtest = "pyp9m4.ladr_cli:sigtest_main"
test_clause_eval = "pyp9m4.ladr_cli:test_clause_eval_main"
test_complex = "pyp9m4.ladr_cli:test_complex_main"
tptp_to_ladr = "pyp9m4.ladr_cli:tptp_to_ladr_main"
unfast = "pyp9m4.ladr_cli:unfast_main"
upper-covers = "pyp9m4.ladr_cli:upper_covers_main"


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]
# Placeholder for future optional TPTP tooling (stdlib bridge lives in ``pyp9m4.bridge.tptp``).
tptp = []
smt = [
    "pysmt>=0.9.5",
]

[tool.hatch.build.targets.wheel]
packages = ["pyp9m4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that require resolved LADR binaries (download or LADR_BIN_DIR)",
]
